Day1/Solver.cs => Day1/Day1.cs

--- a/AdventOfCode2019CSharp/AdventOfCode2019CSharp.csproj
+++ b/AdventOfCode2019CSharp/AdventOfCode2019CSharp.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Day1\Solver.cs" />
+    <Compile Include="Day1\Day1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
