--- a/AdventOfCode2019CSharp/AdventOfCode2019CSharp.csproj
+++ b/AdventOfCode2019CSharp/AdventOfCode2019CSharp.csproj
@@ -44,10 +44,13 @@
     <Compile Include="Day1\Day1.cs" />
     <Compile Include="Day1\Day1P1.cs" />
     <Compile Include="Day1\Day1P2.cs" />
+    <Compile Include="Day2\Day2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Day1\masses.txt" />
+    <Content Include="Day2\intcode.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
