--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -47,11 +47,16 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day1Tests\GetAllFuel.cs" />
     <Compile Include="Day1Tests\GetAllMasses.cs" />
     <Compile Include="Day1Tests\GetNeededFuel.cs" />
+    <Compile Include="Day2Tests\ExecuteIntcode.cs" />
+    <Compile Include="Day2Tests\ExecuteIntCodeWithNounAndVerb.cs" />
+    <Compile Include="Day2Tests\GetIntCode.cs" />
+    <Compile Include="Day2Tests\GetNounAndVerbForIntCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +68,7 @@
       <Name>AdventOfCode2019CSharp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
